# terrain-visibility

./: README.md
OldContents/: temp.m  temp1.m
OldContents/JME_GPU/GaurdAllocGPU/nbproject/: build-impl.xml  genfiles.properties  project.properties  project.xml
OldContents/JME_GPU/GaurdAllocGPU/nbproject/private/: private.properties
OldContents/JME_GPU/GaurdAllocGPU/src/guardalloc/: Device.java  MainFrame.java  OffScreenOGL.java  OnScreenOGL_Debug.java  Platform.java  Terrain.java  TerrainGenerator.java  Viewing.java
OldContents/JME_GPU/jmonkeyengine-3.2.4-stable/: local.properties
OldContents/JME_GPU/jmonkeyengine-3.2.4-stable/jme3-core/src/main/java/com/jme3/system/: NullContext.java
OldContents/Matlab/: UnifiedApp.mlapp
OldContents/Matlab/GuardAllocation/: Problem1.fig  Problem1_minimumGaurds.m  Problem1_minimumSegment.m  Problem2.fig  Problem2.m  Problem2_minimumSegments.m  Problem2_minimumSegments_noShared.m  Problem3.fig  Problem3.m  README.md  UnifiedApp.mlapp  abcd.mat  calcVisibility.m  generate2DStepTerrain.m  generate2DTerrain.m  generateTerrain.m  main_problems.m  main_visTest.m  problem1_fcn.m  problem2_fcn.m  problem3_fcn.m  testMatlabBFS.m
OldContents/Matlab/GuardAllocation/TriangleRayIntersection/: license.txt
OldContents/Matlab/GuardAllocation/TriangleRayIntersection/html/: TriangleRayIntersection_tutorial.html
OldContents/UnityProject/VisibilityProject/Assets/: CreateShapes.cs  Engine.cs  Path.cs  README.md
OldContents/UnityProject/VisibilityProject/Assets/Scenes/: SampleScene.unity
OldContents/UnityProject/VisibilityProject/ProjectSettings/: ProjectSettings.asset
OldContents/unitySource/: Guard.cs  Maffs.cs  Terrain.cs
QtProject/VP/: BackendContainer.cpp  BackendContainer.h  CMakeLists.txt  README.md
QtProject/VP/ILP/: ReadAst.py  TerrainInput.py  ilpAlgGen.py  ilpAlgGenBSF.py  ilpAlgGenCC.py  ilpChain.txt  ilpInput100.txt  ilpInput4.txt
QtProject/VP/ILP/Inputs/: ilpInput16.txt  ilpInput30.txt  ilpInput9.txt
QtProject/VP/ILP/Inputs/HtMapFib10/: HtMapFib10.txt
QtProject/VP/ILP/Inputs/HtMapFib100/: HtMapFib100.txt
QtProject/VP/ILP/Inputs/HtMapFib200/: HtMapFib200.txt
QtProject/VP/ILP/Inputs/HtMapFib50/: HtMapFib50.txt  HtMapFib50MultiVP.txt
QtProject/VP/ILP/Inputs/HtMapFib6/: HtMapFib6Multi.txt
QtProject/VP/ILP/Inputs/HtMapSq100/: HtMapSq100.txt
QtProject/VP/ILP/Inputs/HtMapSq30/: HtMapSq30.txt
QtProject/VP/ILP/Inputs/HtMapSq9/: HtMapSq9.txt
QtProject/VP/ILP/Inputs/test3Fib100/: test3Fib100.txt
QtProject/VP/ILP/Inputs/test3Fib6/: test3Fib6.txt  test3Fib6Multi.txt
QtProject/VP/Python/: ReadAst.py  ReadElevImg.py  TerrainInput.py  Visibility.py  algBSF.py  common.py  dqnMain.py  ilpAlgGen.py  ilpAlgGenBSF.py  ilpAlgGenCC.py  mlCommon.py  opMain.py  psoMain.py  psoMainStages.py  revMain.py  rlMain.py  showMesh.py  showQuad.py  vpGui.py
QtProject/VP/Python/Inputs/: ilpChain.txt
QtProject/VP/Python/Inputs/Geogebra/: ggb21g100c.txt  ggb21g100cAst.txt
QtProject/VP/Python/Inputs/HtMapFib100/: temp.txt
QtProject/VP/Python/Inputs/HtMapFib20/: HtMapFib20.txt  HtMapFib20MultiVP.txt
QtProject/VP/Python/Inputs/HtMapFib6/: HtMapFib6.txt
QtProject/VP/Python/Inputs/HtMapSq9/: HtMapSq9MultiVP.txt
QtProject/VP/Python/Inputs/Specific/: ilpInputLarge.txt  ilpInputSmall.txt
QtProject/VP/Python/Inputs/testflatFib16/: testflatFib16.txt
QtProject/VP/backend/: TiledVS.cpp  TiledVS.h  connectedcomponent.cpp  connectedcomponent.h  guard.cpp  guard.h  lz4.cpp  lz4.h  multiguardalgorithm.cpp  multiguardalgorithm.h  singleguardalgorithm.cpp  singleguardalgorithm.h  tiledMatrix.cpp  tiledMatrix.h
QtProject/VP/frontend/: Main.qml  main.cpp  surface3DSeries_template.qml  surface_template.qml  test.qml
QtProject/VP/openCVBins_MGW/x64/mingw/lib/: OpenCVConfig.cmake
QtProject/VP/tiles/: N32W110.hgt
TiledVS-master/: TiledVS  TiledVS.cpp  lz4.c
pyopencl_visibility/: requirements.txt  test1.py  test2.py  test3.py
(+4 files in other folders)
